--- a/OhioTrackStats/Views/Admin/AthleteEntry.cshtml
+++ b/OhioTrackStats/Views/Admin/AthleteEntry.cshtml
@@ -2,3 +2,77 @@
     ViewBag.Title = "Athlete Entry";
     ViewBag.MetaDescription = "OhioTrackStats.com Athlete Entry";
 }
+
+@model OhioTrackStats.ViewModels.Admin.AthleteEntryViewModel
+
+<h1>Athlete Entry</h1>
+<hr />
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group row">
+        @Html.LabelFor(x => x.SelectedSchoolId, new { @class = "col-sm-2 col-form-label-lg" })
+        <div class="col-sm-10">
+            @Html.DropDownListFor(x => x.SelectedSchoolId, new SelectList(Model.Schools.Select(y => new { Value = y.Id, Text = y.Name }), "Value", "Text"), new { @class = "form-control form-control-lg" })
+        </div>
+    </div>
+
+    <div class="form-group row">
+        @Html.LabelFor(x => x.FirstName, new { @class = "col-sm-2 col-form-label-lg"})
+        <div class="col-sm-10">
+            @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control form-control-lg" })
+        </div>
+    </div>
+
+    <div class="form-group row">
+        @Html.LabelFor(x => x.LastName, new { @class = "col-sm-2 col-form-label-lg" })
+        <div class="col-sm-10">
+            @Html.TextBoxFor(x => x.LastName, new { @class = "form-control form-control-lg" })
+        </div>
+    </div>
+
+    <div class="form-group row">
+        @Html.LabelFor(x => x.GraduationYear, new { @class = "col-sm-2 col-form-label-lg" })
+        <div class="col-sm-10">
+            @Html.TextBoxFor(x => x.GraduationYear, new { @class = "form-control form-control-lg" })
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-10">
+            <button type="submit" class="btn btn-primary">Add</button>
+        </div>
+    </div>
+}
+
+<table class="table table-striped" id="athletes">
+    <tr>
+        <th>Name</th>
+        <th>Graduation Year</th>
+        <th>Gender</th>
+    </tr>
+</table>
+
+@section scripts {
+    <script>
+        $(document).ready(function () {
+            $("#SelectedSchoolId").on("change", function() {
+                var schoolId = this.value;
+                $.get("/Admin/GetAthletes/" + schoolId, function (athletes) {
+                    $("tr:has(td)").remove();
+                    $.each(athletes, function (index, athlete) {
+                        var row = $("<tr/>");
+                        var nameColumn = $("<td/>").html(athlete.FirstName + " " + athlete.LastName);
+                        var gradYearColumn = $("<td/>").html(athlete.GraduationYear);
+                        var genderColumn = $("<td/>").html(athlete.Gender);
+                        row.append(nameColumn).append(gradYearColumn).append(genderColumn);
+
+                        $("#athletes").append(row);
+                    });
+                });
+            });
+        });
+    </script>
+}
