--- a/OhioTrackStats/Views/Admin/Index.cshtml
+++ b/OhioTrackStats/Views/Admin/Index.cshtml
@@ -11,4 +11,5 @@
     <li>@Html.ActionLink("Location Entry", "LocationEntry")</li>
     <li>@Html.ActionLink("Meet Entry", "MeetEntry")</li>
     <li>@Html.ActionLink("Performance Entry", "PerformanceEntry")</li>
+    <li>@Html.ActionLink("Associate Athlete Performance", "AssociateAthletePerformance")</li>
 </ul>
