--- a/OhioTrackStats/Views/Admin/PerformanceEntry.cshtml
+++ b/OhioTrackStats/Views/Admin/PerformanceEntry.cshtml
@@ -65,6 +65,7 @@
     <div class="form-group row">
         <div class="col-sm-10">
             <button type="submit" class="btn btn-primary">Add</button>
+            @Html.ActionLink("Back", "Index", new { }, new { @class = "btn btn-secondary" })
         </div>
     </div>
 }
