--- a/OhioTrackStats/Views/Shared/_Layout.cshtml
+++ b/OhioTrackStats/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
             </div>
         </div>
     </nav>
-    <main class="container">
+    <main class="container-fluid">
         @RenderBody()
     </main>
     <footer class="footer bg-dark">
