--- a/OhioTrackStats/Views/Home/Privacy.cshtml
+++ b/OhioTrackStats/Views/Home/Privacy.cshtml
@@ -2,3 +2,67 @@
     ViewBag.Title = "Privacy Policy";
     ViewBag.MetaDescription = "OhioTrackStats.com Privacy Policy";
 }
+
+<h2>Privacy Policy</h2>
+<hr />
+<p>This privacy policy has been compiled to better serve those who are concerned with how their "Personally Identifiable Information" (PII) is being used online. PII, as described in US privacy law and information security, is information that can be used on its own or with other information to identify, contact, or locate a single person, or to identify an individual in context. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect, or otherwise handle your Personally Identifiable Information in accorance to our website.</p>
+<p><strong>What personal information do we collect from the people that visit our website?</strong></p>
+<p>None.</p>
+<p><strong>When do we collect information?</strong></p>
+<p>Never.</p>
+<p><strong>How do we use your information?</strong></p>
+<p>We will never use your information.</p>
+<p><strong>How do we protect your information?</strong></p>
+<p>We never collect your information, so we do not need to protect it.</p>
+<p><strong>Do we use "cookies"?</strong></p>
+<p>We do not use cookies for tracking purposes</p>
+<p>You can choose to have your computer warn you each time a cookie is being sent, or you can choose to turn off all cookies. You do this through your browser settings. Since browser is a little different, look at your browser's Help Menu to learn the correct way to modify your cookies.</p>
+<p><strong>Third-party disclosure</strong></p>
+<p>We do not sell, trade, or otherwise transfer to outside parties your Personally Identifiable Information.</p>
+<p><strong>Third-party links</strong></p>
+<p>We do not include or offer third-party products or services on our website.</p>
+<p><strong>Google</strong></p>
+<p>Google's advertising requirements can be summed up by Google's Advertising Principles. They are put in place to provide a positive experience for users. <a href="https://support.google.com/adwordspolicy/answer/1316548?hl=en" target="_blank">https://support.google.com/adwordspolicy/answer/1316548?hl=en</a></p>
+<p>We have not enabled Google AdSense on our site but we may do so in the future.</p>
+<p><strong>California Online Privacy Protection Act</strong></p>
+<p>CalOPPA is the first state law in the nation to require commercial websites and online services to post a privacy policy. The law's reach stretches well beyond California to require any person or company in the United States (and conceivably the world) that operates websites collecting Personally Identifiable Information from California consumers to post a conspicuous privacy policy on its website stating exactly the information being collected and those individuals or companies with whom it is being shared.</p>
+<p>See more at: <a href="http://consumercal.org/california-online-privacy-protection-act-caloppa/#sthash.0FdRbT51.dpuf" target="_blank">http://consumercal.org/california-online-privacy-protection-act-caloppa/#sthash.0FdRbT51.dpuf</a></p>
+<p><strong>According to CalOPPA, we agree to the following:</strong></p>
+<p>Users can visit our site anonymously.</p>
+<p>Once this privacy policy is created, we will add a link to it on our home page or as a minimum, on the first significant page after entering our website.</p>
+<p>Our Privacy Policy link includes the word 'Privacy' and can easily be found on the page specified above.</p>
+<p>You will be notified of any Privacy Policy changes:</p>
+<ul>
+    <li>On our Privacy Policy Page</li>
+</ul>
+<p><strong>How does our site handle Do Not Track signals?</strong></p>
+<p>We honor Do Not Track signals and Do Not Track, plant cookies, or use advertising when a Do Not Track (DNT) browser mechanism is in place.</p>
+<p><strong>Does our site allow third-party behavioral tracking?</strong></p>
+<p>It's also important to note that we do not allow third-party behavioral tracking</p>
+<p><strong>COPPA (Children Online Privacy Protection Act)</strong></p>
+<p>When it comes to the collection of personal information from children under the age of 13 years old, the Children's Online Privacy Protection Act (COPPA) puts parents in control. The Federal Trade Commission, United States' consumer protection agency, enforces the COPPA Rule, which spells out what operators of websites and online services must do to protect children's privacy and safety online.</p>
+<p>We do not specifically market to children under the age of 13 years old.</p>
+<p><strong>Fair Information Practices</strong></p>
+<p>The Fair Information Practices Principles form the backbone of privacy law in the United States and the concepts they include have played a significant role in the development of data protection laws around the globe. Understanding the Fair Information Practice Principles and how they should be implemented is critical to comply with the various privacy laws that protect personal information.</p>
+<p>As we store no personal information, there is no need to inform you of any data breaches.</p>
+<p><strong>CAN SPAM Act</strong></p>
+<p>The CAN-SPAM Act is a law that sets the rules for commercial email, establishes requirements for commercial messages, gives recipients the right to have emails stopped from being sent to them, and spells out tough penalties for violations.</p>
+<p>We never collect your email information, so we will not be sending you email.</p>
+<p><strong>Contacting Us</strong></p>
+<p>If there are any questions regarding this privacy policy, you may contact us using the information below.</p>
+<address>
+    <strong>OhioTrackStats.com</strong><br />
+    c/o Tony Morris<br />
+    46 W. Maple Dr.<br />
+    Seville, OH 44273<br />
+    United States<br />
+    <script>document.write('<'+'a'+' '+'h'+'r'+'e'+'f'+'='+"'"+'&'+'#'+'1'+'0'+'9'+';'+'a'+'i'+'l'+'t'+'o'+'&'+'#'+'5'+'8'+';'+
+    'p'+'%'+'&'+'#'+'5'+'5'+';'+'&'+'#'+'5'+'0'+';'+'i'+'v'+'a'+'c'+'%'+'7'+'&'+'#'+'5'+'7'+';'+'&'+'#'+
+    '6'+'4'+';'+'o'+'h'+'&'+'#'+'1'+'0'+'5'+';'+'&'+'#'+'1'+'1'+'1'+';'+'&'+'#'+'1'+'1'+'6'+';'+'r'+'a'+
+    'c'+'k'+'s'+'t'+'%'+'&'+'#'+'5'+'4'+';'+'1'+'&'+'#'+'3'+'7'+';'+'7'+'4'+'%'+'7'+'&'+'#'+'5'+'1'+';'+
+    '&'+'#'+'4'+'6'+';'+'&'+'#'+'9'+'9'+';'+'o'+'&'+'#'+'1'+'0'+'9'+';'+"'"+'>'+'&'+'#'+'1'+'1'+'2'+';'+
+    'r'+'i'+'v'+'a'+'c'+'&'+'#'+'1'+'2'+'1'+';'+'&'+'#'+'6'+'4'+';'+'o'+'h'+'i'+'o'+'t'+'r'+'&'+'#'+'9'+
+    '7'+';'+'&'+'#'+'9'+'9'+';'+'k'+'s'+'t'+'a'+'t'+'s'+'&'+'#'+'4'+'6'+';'+'&'+'#'+'9'+'9'+';'+'o'+'m'+
+    '<'+'/'+'a'+'>');</script><noscript>[Turn on JavaScript to see the email address]</noscript>
+</address>
+<p class="text-muted">Last Edited on 2018-04-06</p>
