--- a/OhioTrackStats/Views/Home/Submit.cshtml
+++ b/OhioTrackStats/Views/Home/Submit.cshtml
@@ -8,14 +8,15 @@
 <p>OhioTrackStats.com is mainly populated via data pulled directly from <a href="http://www.baumspage.com" target="_blank">Baum's Page</a>. However, in the extremely likely event that I missed something, please send me an email with the details listed below.</p>
 <dl>
     <dt>Email Address</dt>
-    <dd><script>document.write('<'+'a'+' '+'h'+'r'+'e'+'f'+'='+"'"+'m'+'a'+'i'+'l'+'&'+'#'+'1'+'1'+'6'+';'+'&'+'#'+'1'+'1'+'1'+';'+
-    '&'+'#'+'5'+'8'+';'+'&'+'#'+'3'+'7'+';'+'7'+'3'+'u'+'b'+'m'+'%'+'&'+'#'+'5'+'4'+';'+'&'+'#'+'5'+'7'+
-    ';'+'t'+'%'+'&'+'#'+'5'+'2'+';'+'0'+'o'+'&'+'#'+'1'+'0'+'4'+';'+'i'+'&'+'#'+'1'+'1'+'1'+';'+'t'+'%'+
-    '7'+'2'+'a'+'&'+'#'+'9'+'9'+';'+'%'+'6'+'B'+'s'+'%'+'7'+'4'+'a'+'&'+'#'+'1'+'1'+'6'+';'+'s'+'&'+'#'+
-    '4'+'6'+';'+'c'+'o'+'m'+"'"+'>'+'s'+'u'+'b'+'m'+'i'+'&'+'#'+'1'+'1'+'6'+';'+'&'+'#'+'6'+'4'+';'+'&'+
-    '#'+'1'+'1'+'1'+';'+'h'+'i'+'&'+'#'+'1'+'1'+'1'+';'+'t'+'&'+'#'+'1'+'1'+'4'+';'+'a'+'c'+'k'+'&'+'#'+
-    '1'+'1'+'5'+';'+'t'+'&'+'#'+'9'+'7'+';'+'t'+'s'+'&'+'#'+'4'+'6'+';'+'c'+'&'+'#'+'1'+'1'+'1'+';'+'m'+
-    '<'+'/'+'a'+'>');</script><noscript>[Turn on JavaScript to see the email address]</noscript></dd>
+    <dd><script>document.write('<'+'a'+' '+'h'+'r'+'e'+'f'+'='+"'"+'&'+'#'+'1'+'0'+'9'+';'+'a'+'&'+'#'+'1'+'0'+'5'+';'+'&'+'#'+'1'+
+    '0'+'8'+';'+'t'+'o'+'&'+'#'+'5'+'8'+';'+'&'+'#'+'3'+'7'+';'+'&'+'#'+'5'+'5'+';'+'3'+'%'+'&'+'#'+'5'+
+    '5'+';'+'5'+'b'+'%'+'6'+'D'+'%'+'6'+'9'+'t'+'&'+'#'+'6'+'4'+';'+'o'+'%'+'&'+'#'+'5'+'4'+';'+'8'+'i'+
+    'o'+'t'+'&'+'#'+'1'+'1'+'4'+';'+'a'+'&'+'#'+'9'+'9'+';'+'k'+'%'+'&'+'#'+'5'+'5'+';'+'&'+'#'+'5'+'1'+
+    ';'+'&'+'#'+'1'+'1'+'6'+';'+'a'+'%'+'&'+'#'+'5'+'5'+';'+'4'+'s'+'&'+'#'+'4'+'6'+';'+'%'+'&'+'#'+'5'+
+    '4'+';'+'3'+'o'+'m'+"'"+'>'+'s'+'&'+'#'+'1'+'1'+'7'+';'+'b'+'m'+'&'+'#'+'1'+'0'+'5'+';'+'t'+'&'+'#'+
+    '6'+'4'+';'+'o'+'h'+'i'+'o'+'&'+'#'+'1'+'1'+'6'+';'+'r'+'&'+'#'+'9'+'7'+';'+'c'+'&'+'#'+'1'+'0'+'7'+
+    ';'+'s'+'t'+'a'+'&'+'#'+'1'+'1'+'6'+';'+'&'+'#'+'1'+'1'+'5'+';'+'&'+'#'+'4'+'6'+';'+'c'+'&'+'#'+'1'+
+    '1'+'1'+';'+'m'+'<'+'/'+'a'+'>');</script><noscript>[Turn on JavaScript to see the email address]</noscript></dd>
     <dt>Subject</dt>
     <dd>Submit Performance</dd>
     <dt>Body</dt>
