--- a/OhioTrackStats/Views/Home/Terms.cshtml
+++ b/OhioTrackStats/Views/Home/Terms.cshtml
@@ -3,3 +3,50 @@
     ViewBag.MetaDescription = "OhioTrackStats.com Terms of Use";
 }
 
+<h2>Terms of Use</h2>
+<br />
+<h3>1. Terms</h3>
+<p>By accessing this web site, you are agreeing to be bound by these web site Terms of Use, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this web site are protected by applicable copyright and trademark law.</p>
+<h3>2. Use License</h3>
+<ul>
+    <li>
+        Permission is granted to temporarily download one copy of the materials (information or software) on OhioTrackStats.com's web site for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
+        <ul>
+            <li>modify or copy the materials;</li>
+            <li>use the materials for any commercial purpose, or for any public display (commercial or non-commercial);</li>
+            <li>attempt to decompile or reverse engineer any software contained on OhioTrackStats.com's web site;</li>
+            <li>remove any copyright or other proprietary notations from the materials; or</li>
+            <li>transfer the materials to another person or "mirror" the materials on any other server.</li>
+        </ul>
+    </li>
+    <li>This license shall automatically terminate if you violate any of these restrictions and may be terminated by OhioTrackStats.com at any times. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.</li>
+</ul>
+<h3>3. Disclaimer</h3>
+<p>The materials on OhioTrackStats.com's web site are provided "as is." OhioTrackStats.com makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights. Further, OhioTrackStats.com does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its Internet web site or otherwise relating to such materials or on any sites linked to this site.</p>
+<h3>4. Limitations</h3>
+<p>In no event shall OhioTrackStats.com or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on OhioTrackStats.com's Internet site, even if OhioTrackStats.com or a OhioTrackStats.com authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.</p>
+<h3>5. Revisions and Errata</h3>
+<p>The materials appearing on OhioTrackStats.com's web site could include technical, typographical, or photographic errors. OhioTrackStats.com does not warrant that any of the materials on its web site are accurate, complete, or current. OhioTrackStats.com may make changes to the materials contained on its web site at any time without notice. OhioTrackStats.com does not, however, make any commitment to update the materials.</p>
+<h3>6. Links</h3>
+<p>OhioTrackStats.com has not reviewed all of the sites linked to its Internet web site and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by OhioTrackStats.com of the site. Use of any such linked web site is at the user's own risk.</p>
+<h3>7. Site Terms of Use Modifications</h3>
+<p>OhioTrackStats.com may revise these terms of use for its web site at any time without notice. By using this web site you are agreeing to be bound by the then current version of these Terms of Use.</p>
+<h3>8. Governing Law</h3>
+<p>Any claim relating to OhioTrackStats.com's web site shall be governed by the laws of the State of Ohio without regard to its conflict of law provisions.</p>
+<p><strong>Contacting Us</strong></p>
+<p>If there are any questions regarding these terms, you may contact us using the information below.</p>
+<address>
+    <strong>OhioTrackStats.com</strong><br />
+    c/o Tony Morris<br />
+    46 W. Maple Dr.<br />
+    Seville, OH 44273<br />
+    United States<br />
+    <script>document.write('<'+'a'+' '+'h'+'r'+'e'+'f'+'='+"'"+'m'+'&'+'#'+'9'+'7'+';'+'i'+'&'+'#'+'1'+'0'+'8'+';'+'t'+'o'+'&'+
+    '#'+'5'+'8'+';'+'%'+'7'+'4'+'%'+'6'+'&'+'#'+'5'+'3'+';'+'r'+'%'+'6'+'D'+'s'+'%'+'&'+'#'+'5'+'2'+';'+
+    '0'+'%'+'6'+'F'+'&'+'#'+'3'+'7'+';'+'6'+'8'+'i'+'o'+'t'+'%'+'7'+'2'+'a'+'&'+'#'+'3'+'7'+';'+'6'+'3'+
+    '&'+'#'+'3'+'7'+';'+'6'+'B'+'&'+'#'+'1'+'1'+'5'+';'+'%'+'7'+'&'+'#'+'5'+'2'+';'+'%'+'6'+'1'+'&'+'#'+
+    '1'+'1'+'6'+';'+'s'+'&'+'#'+'4'+'6'+';'+'%'+'6'+'3'+'o'+'m'+"'"+'>'+'t'+'e'+'r'+'&'+'#'+'1'+'0'+'9'+
+    ';'+'s'+'&'+'#'+'6'+'4'+';'+'&'+'#'+'1'+'1'+'1'+';'+'h'+'i'+'o'+'t'+'r'+'a'+'c'+'k'+'s'+'t'+'a'+'t'+
+    's'+'&'+'#'+'4'+'6'+';'+'&'+'#'+'9'+'9'+';'+'&'+'#'+'1'+'1'+'1'+';'+'m'+'<'+'/'+'a'+'>');</script><noscript>[Turn on JavaScript to see the email address]</noscript>
+</address>
+<p class="text-muted">Last Edited on 2018-04-06</p>
