Adding parsing on the website

--- a/OhioTrackStats/Views/Shared/_Layout.cshtml
+++ b/OhioTrackStats/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <title>@ViewBag.Title | OhioTrackStats.com</title>
 
     @Styles.Render("~/css/site")
+    @Styles.Render("~/css/chosen")
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
@@ -44,6 +45,7 @@
     </footer>
     
     @Scripts.Render("~/js/bootstrap")
+    @Scripts.Render("~/js/chosen")
     @RenderSection("scripts", false)
 </body>
 </html>
