--- a/OhioTrackStats/Views/Admin/Index.cshtml
+++ b/OhioTrackStats/Views/Admin/Index.cshtml
@@ -7,6 +7,7 @@
 <hr />
 
 <ul>
+    <li>@Html.ActionLink("Bulk Upload", "Upload")</li>
     <li>@Html.ActionLink("Athlete Entry", "AthleteEntry")</li>
     <li>@Html.ActionLink("Location Entry", "LocationEntry")</li>
     <li>@Html.ActionLink("Meet Entry", "MeetEntry")</li>
